added factory method for stream socket

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,12 @@
         "thread": "cpp",
         "ratio": "cpp",
         "semaphore": "cpp",
-        "stop_token": "cpp"
+        "stop_token": "cpp",
+        "chrono": "cpp",
+        "condition_variable": "cpp",
+        "map": "cpp",
+        "iomanip": "cpp",
+        "mutex": "cpp",
+        "sstream": "cpp"
     }
 }
